// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateGitConnector tests renders with isForOverrideSets true without crashing 1`] = `
<div>
  <div
    class="StepWizard--main wrapper StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="50"
            viewBox="0 0 14 14"
            width="50"
          >
            <path
              d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
              fill="#f42534"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Git Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Manifest Source
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Description
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Tags
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateGitConnector tests renders with isForOverrideSets true without crashing 2`] = `
<div>
  <div
    class="StepWizard--main wrapper StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="50"
            viewBox="0 0 14 14"
            width="50"
          >
            <path
              d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
              fill="#f42534"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Git Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Manifest Source
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Description
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Tags
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateGitConnector tests updates form  without crashing: step 1 1`] = `
<div>
  <div
    class="StepWizard--main wrapper StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="50"
            viewBox="0 0 14 14"
            width="50"
          >
            <path
              d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
              fill="#f42534"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Git Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Manifest Source
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Description
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Tags
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateGitConnector tests updates form  without crashing: step 2 1`] = `
<div>
  <div
    class="StepWizard--main wrapper StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="service-github"
        >
          <svg
            height="50"
            viewBox="0 0 14 14"
            width="50"
          >
            <path
              d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
              fill="#f42534"
            />
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        Git Connector
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Overview
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Test Connection
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Manifest Source
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          Overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy_name
                              </span>
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          Name
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value="dummy name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Description
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="Collapse--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                      >
                        <div
                          class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                        >
                          <span
                            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                            data-icon="main-chevron-right"
                          >
                            <svg
                              height="10"
                              viewBox="0 0 8 14"
                              width="10"
                            >
                              <path
                                d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                                fill="#4d5969"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main CollapseHeader--title"
                          >
                            Tags
                          </p>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        />
                      </div>
                      <div
                        class="Collapse--collapse"
                      >
                        <div
                          class="bp3-collapse collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
